# osdag-latex-env

./: pyproject.toml
assets/linux/texmf-dist/: ls-R
assets/linux/texmf-dist/web2c/: fmtutil.cnf  texmf.cnf  updmap.cfg
assets/linux/texmf-var/: ls-R
assets/linux/tlpkg/: texlive.profile  texlive.tlpdb
assets/linux/tlpkg/tlpobj/: 00texlive.installation.tlpobj  adjustbox.tlpobj  amsmath.tlpobj  beamer.tlpobj  biber.tlpobj  bibtex.x86_64-linux.tlpobj  count1to.tlpobj  courier.tlpobj  csquotes.tlpobj  currfile.tlpobj  dvipdfmx.x86_64-linux.tlpobj  dvips.tlpobj  dvips.x86_64-linux.tlpobj  eso-pic.tlpobj  etex.tlpobj  extractbb.tlpobj  fancyhdr.tlpobj  fancyvrb.tlpobj  fmtcount.tlpobj  fontspec.tlpobj  footmisc.tlpobj  helvetic.tlpobj  hyperref.tlpobj  hyperxmp.x86_64-linux.tlpobj  hyph-utf8.tlpobj  hyphen-english.tlpobj  hyphenat.tlpobj  iftex.tlpobj  koma-script.tlpobj  kpathsea.x86_64-linux.tlpobj  l3kernel.tlpobj  langsci.tlpobj  lastpage.tlpobj  latex-tools-dev.tlpobj  latexmk.tlpobj  lettrine.tlpobj  lineno.tlpobj  listings.tlpobj  luahbtex.tlpobj  luahbtex.x86_64-linux.tlpobj  (+39 more)
assets/mac/TinyTeX/texmf-local/: ls-R
assets/mac/TinyTeX/texmf-var/: ls-R
assets/mac/texmf-dist/: ls-R
assets/mac/texmf-dist/web2c/: fmtutil.cnf
assets/mac/tlpkg/: texlive.profile  texlive.tlpdb
assets/mac/tlpkg/tlpobj/: 00texlive.installation.tlpobj  achemso.tlpobj  (+77 more)
assets/win/texmf-dist/: ls-R
assets/win/texmf-var/: ls-R
assets/win/tlpkg/: texlive.profile  texlive.tlpdb
conda-recipe/: meta.yaml
osdag-latex-env/: __main__.py
osdag_latex_env/: __init__.py  __main__.py
(+651 files in other folders)
